--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "dependencies": "0.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-material-ui-carousel": "^1.8.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "read-more-react": "^1.0.10",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
