--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "chroma-js": "^2.1.0",
     "classnames": "^2.2.6",
     "dependencies": "0.0.1",
     "react": "^16.13.1",
@@ -18,8 +19,10 @@
     "react-material-ui-carousel": "^1.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "read-more-react": "^1.0.10",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
