--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "classnames": "^2.2.6",
     "dependencies": "0.0.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-material-ui-carousel": "^1.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-spinners": "^0.9.0",
     "read-more-react": "^1.0.10",
     "request": "^2.88.2",
     "uuid": "^8.3.1"
