--- a/package.json
+++ b/package.json
@@ -3,32 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^1.4.0",
-    "chroma-js": "^2.1.0",
-    "classnames": "^2.2.6",
+    "@mui/lab": "^5.0.0-alpha.158",
+    "@mui/material": "^5.15.2",
+    "@mui/styles": "^5.15.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.3",
+    "chroma-js": "^2.4.2",
+    "classnames": "^2.5.1",
     "dependencies": "0.0.1",
-    "image-to-base64": "^2.1.1",
-    "notistack": "^1.0.5",
-    "react": "^16.13.1",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
-    "react-image-crop": "^8.6.6",
+    "image-to-base64": "^2.2.0",
+    "notistack": "^3.0.1",
+    "react": "^17.0.2",
+    "react-cookie": "^7.0.0",
+    "react-dom": "^17.0.2",
+    "react-image-crop": "^11.0.2",
     "react-linkify": "^0.2.2",
-    "react-material-ui-carousel": "^1.8.2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
-    "react-spinners": "^0.9.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "read-more-react": "^1.0.10",
     "request": "^2.88.2",
-    "socket.io-client": "^2.5.0",
-    "uuid": "^8.3.1"
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
